@@ -132,7 +132,7 @@ public class TestMinShouldMatch2 extends LuceneTestCase {
     case SCORER:
       return weight.scorer(reader.getContext());
     case BULK_SCORER:
-      final BulkScorer bulkScorer = weight.booleanScorer(reader.getContext());
+      final BulkScorer bulkScorer = weight.optionalBulkScorer(reader.getContext());
       if (bulkScorer == null) {
         if (weight.scorer(reader.getContext()) != null) {
           throw new AssertionError("BooleanScorer should be applicable for this query");
